--- a/app/index.html
+++ b/app/index.html
@@ -101,7 +101,7 @@
 	        <div class="slide third" data-anchor="slide3">
              <div class="container">
                 <div class="row ">
-                  <div class="col l6 ">
+                  <div class="col l12 center">
                    <div class="bubbleChart">
                    </div>
                   </div>
@@ -112,30 +112,94 @@
           <div class="slide fourth" data-anchor="slide4">
              <div class="container">
                 <div class="row ">
-                  <div class="col l6 ">
-                    <img class="img-responsive ucf animated fadeInLeft " src="images/ucf-logo.png">
+                  <div class="col l12 center">
+                    <div class="carousel">
+                      <a class="carousel-item" href="#one!"><img src="images/site1.png"></a>
+                      <a class="carousel-item" href="#two!"><img src="images/site2.png"></a>
+                      <a class="carousel-item" href="#three!"><img src="images/site6.jpg"></a>
+                      <a class="carousel-item" href="#four!"><img src="images/site4.png"></a>
+                      <a class="carousel-item" href="#five!"><img src="images/site7.png"></a>
+                    </div>
                   </div>
-                  <div class="col l6 ">
-                    <img class="img-responsive svad animated fadeInRight " src="images/svad.png">
-                  </div>
-                </div><!--end of first row-->
+                </div><!--end of row-->
                </div><!--end of container-->
               </div><!--end of div slide-->
 
           <div class="slide fifth" data-anchor="slide5">
              <div class="container">
-                <div class="row ">
-                  <div class="col l6 ">
-                    <img class="img-responsive ucf animated fadeInLeft " src="images/ucf-logo.png">
+                <div class="row">
+                  <div class="col l4">
+                     <div class="card">
+                      <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="images/site1.png">
+                      </div>
+                      <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">Overture<i class="material-icons right">more_vert</i></span>
+                      </div>
+                      <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Overture<i class="material-icons right">close</i></span>
+                        <p>Fan-site made with Materialize framework and some jQuery.</p>
+                      </div>
+                    </div>
                   </div>
-                  <div class="col l6 ">
-                    <img class="img-responsive svad animated fadeInRight " src="images/svad.png">
+                  <div class="col l4">
+                     <div class="card">
+                      <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="images/site2.png">
+                      </div>
+                      <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">Luminositech<i class="material-icons right">more_vert</i></span>
+                      </div>
+                      <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Luminositech<i class="material-icons right">close</i></span>
+                        <p>E-commerce site made with bootstrap framework.</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col l4">
+                     <div class="card">
+                      <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="images/site6.jpg">
+                      </div>
+                      <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">Oviedo Auto Repairs<i class="material-icons right">more_vert</i></span>
+                      </div>
+                      <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Oviedo Auto Repairs<i class="material-icons right">close</i></span>
+                        <p>Reinvention of an existing automobile service site.</p>
+                      </div>
+                    </div>
                   </div>
                 </div><!--end of first row-->
 
                 <div class="row ">
-                  <div class="col l12 ">
-                    <p class="center animated location fadeIn">4000 Central Florida Blvd,<br>Orlando, FL 32816<br><br></p>
+                  <div class="col l4">
+                     <div class="card">
+                      <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="images/site7.png">
+                      </div>
+                      <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">OSCM<i class="material-icons right">more_vert</i></span>
+                      </div>
+                      <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">OSC<<i class="material-icons right">close</i></span>
+                        <p>Reinvention of a charity organization site .</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col l4">
+                     <div class="card">
+                      <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="images/site4.png">
+                      </div>
+                      <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">Barell o' Toys<i class="material-icons right">more_vert</i></span>
+                      </div>
+                      <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Barrel o' Toys<i class="material-icons right">close</i></span>
+                        <p>Another e-commerce site for vintage toys.</p>
+                      </div>
+                    </div>
                   </div>
                 </div><!--end of second row-->
                </div><!--end of container-->
@@ -182,6 +246,14 @@
     <!-- endbuild -->
     
     <!-- build:js scripts/main.js -->
+    <script src="scripts/d3-transform.js"></script>
+    <script src="scripts/extarray.js"></script>
+    <script src="scripts/misc.js"></script>
+    <script src="scripts/micro-observer.js"></script>
+    <script src="scripts/microplugin.js"></script>
+    <script src="scripts/bubble-chart.js"></script>
+    <script src="scripts/central-click.js"></script>
+    <script src="scripts/lines.js"></script>
     <script src="scripts/main.js"></script>
     <!-- endbuild -->
   </body>
