cleaned up and finalized

--- a/app/index.html
+++ b/app/index.html
@@ -49,19 +49,19 @@
 	           <div class="container">
 	              <div class="row clouds">
 	                <div class="col l2 cloudy">
-	                  <img class="img-responsive animated bounceInDown cloud-1 cloud" src="images/hangcloud copy.png">
+	                  <img class="img-responsive animated bounceInDown cloud-1 cloud" src="images/hangsheep.png">
 	                </div>
 	                <div class="col l2 cloud-2 cloudy">
-	                  <img class="img-responsive animated bounceInDown cloud-3 cloud" src="images/hangcloud copy.png">
+	                  <img class="img-responsive animated bounceInDown cloud-3 cloud" src="images/hangcloud.png">
 	                </div>
 	                <div class="col l4 big-cloud">
-	                  <img class="img-responsive animated bounceInDown cloud-5 cloud2" src="images/hangcloud copy.png">
+	                  <img class="img-responsive animated bounceInDown cloud-5 cloud2" src="images/hangsheep.png">
 	                </div>
 	                <div class="col l2 cloudy">
-	                  <img class="img-responsive animated bounceInDown cloud-4 cloud" src="images/hangcloud copy.png">
+	                  <img class="img-responsive animated bounceInDown cloud-4 cloud" src="images/hangcloud.png">
 	                </div>
 	                <div class="col l2 cloudy">
-	                  <img class="img-responsive animated bounceInDown cloud-2 cloud" src="images/hangcloud copy.png">
+	                  <img class="img-responsive animated bounceInDown cloud-2 cloud" src="images/hangsheep.png">
 	                </div>
 	              </div><!--end of first row-->
 	             <div class="row">
@@ -101,8 +101,8 @@
 	        <div class="slide third" data-anchor="slide3">
              <div class="container">
                 <div class="row ">
-                  <div class="col l12 center">
-                   <div class="bubbleChart">
+                  <div class="col l12">
+                   <div class="center" id="funnel">
                    </div>
                   </div>
                 </div><!--end of first row-->
@@ -127,83 +127,40 @@
 
           <div class="slide fifth" data-anchor="slide5">
              <div class="container">
-                <div class="row">
-                  <div class="col l4">
-                     <div class="card">
-                      <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="images/site1.png">
-                      </div>
-                      <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Overture<i class="material-icons right">more_vert</i></span>
-                      </div>
-                      <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">Overture<i class="material-icons right">close</i></span>
-                        <p>Fan-site made with Materialize framework and some jQuery.</p>
-                      </div>
+               <div class="row">
+                <div id="contact" class="col s12 m8">
+                  <div class="card">
+                    <div class="card-content">
+              <div class="row">
+                <form class="col s12" method="post" action="">
+                  <div class="row">
+                    <div class="input-field col s12">
+                      <input id="first_name" type="text" class="validate" required="required">
+                      <label for="first_name">Name</label>
                     </div>
                   </div>
-                  <div class="col l4">
-                     <div class="card">
-                      <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="images/site2.png">
-                      </div>
-                      <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Luminositech<i class="material-icons right">more_vert</i></span>
-                      </div>
-                      <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">Luminositech<i class="material-icons right">close</i></span>
-                        <p>E-commerce site made with bootstrap framework.</p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col l4">
-                     <div class="card">
-                      <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="images/site6.jpg">
-                      </div>
-                      <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Oviedo Auto Repairs<i class="material-icons right">more_vert</i></span>
-                      </div>
-                      <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">Oviedo Auto Repairs<i class="material-icons right">close</i></span>
-                        <p>Reinvention of an existing automobile service site.</p>
-                      </div>
-                    </div>
-                  </div>
-                </div><!--end of first row-->
+              <div class="row">
+                <div class="input-field col s12">
+                  <input id="email" type="email" class="validate" required="required">
+                  <label for="email" data-error="Invalid">Email</label>
+                </div>
+              </div>
+              <div class="row">
+                <div class="input-field col s12">
+                  <textarea id="textarea1" class="materialize-textarea" required="required"></textarea>
+                  <label for="textarea1">Message</label>
+                </div>
+              </div>
+              <div class="row center">
+                  <button class="btn waves-effect waves-light light-blue darken-1" type="submit" name="action">Submit
+                  </button>
+              </div>
+            </form>
 
-                <div class="row ">
-                  <div class="col l4">
-                     <div class="card">
-                      <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="images/site7.png">
-                      </div>
-                      <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">OSCM<i class="material-icons right">more_vert</i></span>
-                      </div>
-                      <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">OSC<<i class="material-icons right">close</i></span>
-                        <p>Reinvention of a charity organization site .</p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col l4">
-                     <div class="card">
-                      <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="images/site4.png">
-                      </div>
-                      <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Barell o' Toys<i class="material-icons right">more_vert</i></span>
-                      </div>
-                      <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">Barrel o' Toys<i class="material-icons right">close</i></span>
-                        <p>Another e-commerce site for vintage toys.</p>
-                      </div>
-                    </div>
-                  </div>
-                </div><!--end of second row-->
-               </div><!--end of container-->
-              </div><!--end of div slide-->
+
+                
+             </div><!--end of container-->
+          </div><!--end of div slide-->
 
 
 
@@ -233,27 +190,11 @@
     <script src="/bower_components/fullpage.js/dist/jquery.fullpage.js"></script>
     <script src="/bower_components/letteringjs/jquery.lettering.js"></script>
     <script src="/bower_components/textillate/jquery.textillate.js"></script>
-    <script src="/bower_components/d3-transform/src/d3-transform.js"></script>
-    <script src="/bower_components/cafej/src/ext-string.js"></script>
-    <script src="/bower_components/cafej/src/ext-array.js"></script>
-    <script src="/bower_components/cafej/src/micro-observer.js"></script>
-    <script src="/bower_components/cafej/src/misc.js"></script>
-    <script src="/bower_components/microplugin/src/microplugin.js"></script>
-    <script src="/bower_components/bubble-chart/src/bubble-chart.js"></script>
-    <script src="/bower_components/bubble-chart/src/plugins/lines/lines.js"></script>
-    <script src="/bower_components/bubble-chart/src/plugins/central-click/central-click.js"></script>
+    <script src="/bower_components/d3-funnel/dist/d3-funnel.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     
     <!-- build:js scripts/main.js -->
-    <script src="scripts/d3-transform.js"></script>
-    <script src="scripts/extarray.js"></script>
-    <script src="scripts/misc.js"></script>
-    <script src="scripts/micro-observer.js"></script>
-    <script src="scripts/microplugin.js"></script>
-    <script src="scripts/bubble-chart.js"></script>
-    <script src="scripts/central-click.js"></script>
-    <script src="scripts/lines.js"></script>
     <script src="scripts/main.js"></script>
     <!-- endbuild -->
   </body>
